# xdrive

./: .gitignore  .readthedocs.yaml  LICENSE  Makefile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
docs/: Makefile  api.rst  conf.py  index.rst
docs/guides/: headless.md  pitfalls.md  quickstart.md
examples/: 01_basic_window.py  02_screenshot.py  03_keyboard_mouse.py
tests/: conftest.py  test_geometry.py  test_virtual_display.py  test_xdrive.py
xdrive/: __init__.py  assertions.py  conftest.py  display.py  events.py  geometry.py  keyboard.py  mouse.py  screen.py  ui_tree.py  window.py  xdrive.py
